--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
   <head>
     <title>WEB1 - WELCOME</title>
     <meta charset="utf-8">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Q7XF5B3HWE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Q7XF5B3HWE');
+</script>
   </head>
 
   <body>
@@ -13,13 +22,50 @@
       <li><a href="3.html">JavaScript</a></li>
     </ol>
     <h1>WEB이란 무엇인가?</h1>
+    <p>
+      <iframe width="788" height="443" src="https://www.youtube.com/embed/dZWMcBGnv0M" title="[광고없는 실시간 인기차트] 2022년 11월 23일 3주차, 멜론차트 X,노래모음 최신가요 KPOP 플레이리스트" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </p>
     <p><a href="https://www.w3.org/TR/html5/" target="_blank" title="HTML5 application">Hypertext Markup Language (HTML)</a> is the standard makeup language for <b>creating <u>web</u> pages</b> and web applications.<br>
     Hypertext Markup Language (HTML) is the standard makeup language for <b>creating <u>web</u> pages</b> and web applications.
     Hypertext Markup Language (HTML) is the standard makeup language for <b>creating <u>web</u> pages</b> and web applications.
-    Hypertext Markup Language (HTML) is the standard makeup language for <b>creating <u>web</u> pages</b> and web applications.</p>
+    Hypertext Markup Language (HTML) is the standard makeup language for <b>creating <u>web</u> pages</b> and web applications.
+    </p>
     <img src="coding.jpg" width="100%">
     <p style="margin-top:40px">Hypertext Markup Language (HTML) is the standard makeup language for <b>creating <u>web</u> pages</b> and web applications.
     Hypertext Markup Language (HTML) is the standard makeup language for <b>creating <u>web</u> pages</b> and web applications.
-    Hypertext Markup Language (HTML) is the standard makeup language for <b>creating <u>web</u> pages</b> and web applications.</p>
+    Hypertext Markup Language (HTML) is the standard makeup language for <b>creating <u>web</u> pages</b> and web applications.
+    </p>
+    <div id="disqus_thread"></div>
+    <script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://web1-xf7qkqfstq.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+    </script>
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/637e0cafdaff0e1306d90376/1gii6346o';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
   </body>
 </html>
